labs/tier-5-iac-supply-chain/5.5-admission-controller-bypass/src/gatekeeper-config/constraint-templates/require-non-privileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirenonprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sRequireNonPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirenonprivileged

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("Container '%v' must not run as privileged", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          container.securityContext.privileged == true
          msg := sprintf("Init container '%v' must not run as privileged", [container.name])
        }
